--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,12 +16,12 @@ features = ["rt", "stm32f411", "usb_fs"]
 git = "https://github.com/stm32-rs/stm32f4xx-hal.git"
 
 [dependencies]
-cortex-m = "*"
+cortex-m = "0.7"
 cortex-m-rt = "*"
 cortex-m-rtic = { git = "https://github.com/rtic-rs/cortex-m-rtic.git" }
 systick-monotonic = { git = "https://github.com/rtic-rs/systick-monotonic.git" }
 cortex-m-semihosting = "*"
-alloc-cortex-m = "*"
+alloc-cortex-m = "0.4"
 stm32f4 = "*"
 embedded-hal = "*"
 stm32-usbd = "*"
@@ -29,10 +29,10 @@ usb-device = "*"
 usbd-serial = "*"
 panic-halt = "*"
 spi-memory = { git = "https://github.com/sjm42/spi-memory.git" }
-heapless = "*"
 rand = { version = "*", default-features = false, features = ["std_rng"] }
 fugit = "*"
 privatebox = "*"
+menu = "*"
 
 # this lets you use `cargo fix`!
 [[bin]]
