--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,7 +49,7 @@ no-std-compat = { version = "0", features = ["alloc"] }
 [profile.release]
 opt-level = 'z'
 codegen-units = 1 # better optimizations
-debug = true      # symbols are nice and they don't increase the size on Flash
+debug = false     # symbols are nice and they don't increase the size on Flash
 lto = true        # better optimizations
 
 [profile.dev]
