--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,3 +57,8 @@ opt-level = 'z'
 codegen-units = 1 # better optimizations
 debug = true      # symbols are nice and they don't increase the size on Flash
 lto = true        # better optimizations
+
+[build-dependencies]
+build-data = "0.1"
+
+# EOF
