--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,17 +15,22 @@ black_pill = ["stm32f4xx-hal"]
 
 [dependencies.stm32f4xx-hal]
 optional = true
-version = "0"
+version = "0.12"
 features = ["rt", "stm32f411", "usb_fs"]
-git = "https://github.com/stm32-rs/stm32f4xx-hal.git"
+# git = "https://github.com/stm32-rs/stm32f4xx-hal.git"
 
 [dependencies]
 cortex-m = "0.7"
 cortex-m-rt = "0"
-cortex-m-rtic = { git = "https://github.com/rtic-rs/cortex-m-rtic.git" }
-systick-monotonic = { git = "https://github.com/rtic-rs/systick-monotonic.git" }
-# alloc-cortex-m = "0"
-alloc-cortex-m = { git = "https://github.com/rust-embedded/alloc-cortex-m.git" }
+
+cortex-m-rtic = "1"
+systick-monotonic = "1"
+# cortex-m-rtic = { git = "https://github.com/rtic-rs/cortex-m-rtic.git" }
+# systick-monotonic = { git = "https://github.com/rtic-rs/systick-monotonic.git" }
+
+alloc-cortex-m = "0"
+# alloc-cortex-m = { git = "https://github.com/rust-embedded/alloc-cortex-m.git" }
+
 stm32f4 = "0"
 embedded-hal = "0"
 stm32-usbd = "0"
