--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "blackpill-usb-pwdstore"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["Sami J. Mäkinen <sjm@iki.fi>"]
 description = "USB Password Trove for BlackPill card (stm32f411)"
 repository = "https://github.com/sjm42/blackpill-usb-pwdstore"
@@ -15,9 +15,9 @@ black_pill = ["stm32f4xx-hal"]
 
 [dependencies.stm32f4xx-hal]
 optional = true
-version = "0.13"
+# version = "0.13"
 features = ["rt", "stm32f411", "usb_fs"]
-# git = "https://github.com/stm32-rs/stm32f4xx-hal.git"
+git = "https://github.com/stm32-rs/stm32f4xx-hal.git"
 
 [dependencies]
 cortex-m = "0.7"
@@ -31,12 +31,13 @@ alloc-cortex-m = "0.4"
 # alloc-cortex-m = { git = "https://github.com/rust-embedded/alloc-cortex-m.git" }
 
 stm32f4 = "0"
-embedded-hal = "0"
+embedded-hal = "0.2.7"
 stm32-usbd = "0"
 usb-device = "0"
 usbd-serial = "0"
 panic-halt = "0"
 spi-memory = { git = "https://github.com/sjm42/spi-memory.git" }
+# spi-memory = { path = "../spi-memory" }
 fugit = "0"
 rand = { version = "0", default-features = false, features = ["std_rng"] }
 sha2 = { version = "0", default-features = false }
