--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,14 +15,14 @@ black_pill = ["stm32f4xx-hal"]
 
 [dependencies.stm32f4xx-hal]
 optional = true
-version = "0.12"
+version = "0.13.2"
 features = ["rt", "stm32f411", "usb_fs"]
 # git = "https://github.com/stm32-rs/stm32f4xx-hal.git"
 
 [dependencies]
 cortex-m = "0.7"
 cortex-m-rt = "0.7"
-cortex-m-rtic = "1.0"
+cortex-m-rtic = "1.1"
 systick-monotonic = "1.0"
 # cortex-m-rtic = { git = "https://github.com/rtic-rs/cortex-m-rtic.git" }
 # systick-monotonic = { git = "https://github.com/rtic-rs/systick-monotonic.git" }
@@ -31,19 +31,20 @@ alloc-cortex-m = "0.4"
 # alloc-cortex-m = { git = "https://github.com/rust-embedded/alloc-cortex-m.git" }
 
 # stm32f4 = "0"
-embedded-hal = "0.2.7"
-stm32-usbd = "0"
-usb-device = "0"
-usbd-serial = "0"
-panic-halt = "0"
-# spi-memory = { git = "https://github.com/sjm42/spi-memory.git" }
-spi-memory = { path = "../spi-memory" }
-fugit = "0"
-rand = { version = "0", default-features = false, features = ["std_rng"] }
-sha2 = { version = "0", default-features = false }
-privatebox = "0"
-menu = "0"
-no-std-compat = { version = "0", features = ["alloc"] }
+embedded-hal = "0.2"
+stm32-usbd = "0.6"
+usb-device = "0.2"
+usbd-serial = "0.1"
+panic-halt = "0.2"
+fugit = "0.3"
+rand = { version = "0.8", default-features = false, features = ["std_rng"] }
+sha2 = { version = "0.10", default-features = false }
+privatebox = "0.1"
+menu = "0.3"
+no-std-compat = { version = "0.4", features = ["alloc"] }
+
+spi-memory = { git = "https://github.com/sjm42/spi-memory.git" }
+# spi-memory = { path = "../spi-memory" }
 
 # this lets you use `cargo fix`!
 #[[bin]]
